force-app/main/default/objects/ChronarPay_Company_Code__mdt/ChronarPay_Company_Code__mdt.object-meta.xml
<CustomObject>
    <label>ChronarPay Company Code</label>
    <pluralLabel>ChronarPay Company Codes</pluralLabel>
</CustomObject>