force-app/main/default/objects/ChronarPay_Company_Code__mdt/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>Company Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>