force-app/main/default/objects/ChronarPay_Company_Code__mdt/fields/Currency_Key__c.field-meta.xml
<CustomField>
    <fullName>Currency_Key__c</fullName>
    <label>Currency Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>