force-app/main/default/objects/ChronarPay_Company_Code__mdt/fields/Is_3DS_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Is_3DS_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 3DS Disabled</label>
    <type>Checkbox</type>
</CustomField>