force-app/main/default/objects/ChronarPay_Company_Code__mdt/fields/Is_Deposit_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Deposit_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deposit Enabled</label>
    <type>Checkbox</type>
</CustomField>