force-app/main/default/objects/ChronarPay_Company_Code__mdt/fields/Is_Payment_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Disabled</label>
    <type>Checkbox</type>
</CustomField>